--- a/index.html
+++ b/index.html
@@ -25,6 +25,49 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="frontend/js/core/device-detector.js"></script>
     <script src="frontend/js/core/gesture-handler.js"></script>
+
+    <!-- 响应式优化：报告弹窗按钮样式 -->
+    <style>
+        /* 桌面端优化 - 更紧凑的按钮 */
+        @media (min-width: 768px) {
+            /* 报告弹窗底部按钮优化 */
+            #reportModal .modal-footer .btn-primary,
+            #reportModal .modal-footer .btn-secondary {
+                padding: 8px 16px !important;
+                font-size: 13px !important;
+                border-radius: 6px !important;
+            }
+
+            /* 深度分析按钮组 */
+            #reportModal .modal-footer .generation-btn {
+                padding: 10px 18px !important;
+                font-size: 14px !important;
+            }
+
+            #reportModal .modal-footer .generation-btn .btn-icon {
+                font-size: 16px !important;
+            }
+
+            /* 深度分析模块优化 */
+            #reportModal .modal-footer > div:first-child {
+                padding: 14px !important;
+            }
+
+            /* 操作按钮容器间距优化 */
+            #reportModal .modal-footer > div:last-child {
+                gap: 10px !important;
+            }
+        }
+
+        /* 移动端保持原样 */
+        @media (max-width: 767px) {
+            /* 移动端按钮保持触摸友好的大小 */
+            #reportModal .modal-footer .btn-primary,
+            #reportModal .modal-footer .btn-secondary {
+                min-height: 44px; /* 移动端最小可触摸尺寸 */
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="app-container">
@@ -47,7 +90,7 @@
                     </svg>
                     <span>对话</span>
                 </button>
-                <button class="sidebar-tab" data-tab="team" onclick="switchSidebarTab('team')" id="teamTab" style="display: none;">
+                <button class="sidebar-tab" data-tab="team" onclick="switchSidebarTab('team')" id="teamTab" >
                     <svg width="18" height="18" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"/>
                     </svg>
@@ -62,7 +105,8 @@
 
             <!-- 团队空间视图 -->
             <div class="sidebar-view" id="teamView" style="display: none;">
-                <!-- 动态渲染，初始为空 -->
+                <!-- 项目列表容器 -->
+                <div id="projectListContainer"></div>
             </div>
 
             <!-- Sidebar底部：用户信息区 -->
@@ -324,56 +368,50 @@
             </div>
 
             <div class="modal-footer">
-                <!-- 深度分析按钮组 -->
-                <div style="display: flex; gap: 12px; margin-bottom: 16px; padding-bottom: 16px; border-bottom: 1px solid var(--border);">
-                    <button
-                        id="businessPlanBtn"
-                        class="btn-primary generation-btn btn-idle"
-                        data-type="business"
-                        data-status="idle"
-                        onclick="handleGenerationBtnClick('business')"
-                        style="flex: 1;">
-                        <span class="btn-icon">📊</span>
-                        <span class="btn-text">商业计划书</span>
-                    </button>
-                    <button
-                        id="proposalBtn"
-                        class="btn-primary generation-btn btn-idle"
-                        data-type="proposal"
-                        data-status="idle"
-                        onclick="handleGenerationBtnClick('proposal')"
-                        style="flex: 1;">
-                        <span class="btn-icon">📋</span>
-                        <span class="btn-text">产品立项材料</span>
-                    </button>
-                </div>
-
-                <!-- 第二阶段：交互Demo生成入口 -->
-                <div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 20px; border-radius: 12px; margin-bottom: 16px;">
-                    <div style="display: flex; align-items: center; justify-content: space-between;">
-                        <div>
-                            <div style="color: white; font-weight: 600; font-size: 16px; margin-bottom: 4px;">
-                                🚀 第二阶段：验证与快速原型
-                            </div>
-                            <div style="color: rgba(255,255,255,0.9); font-size: 14px;">
-                                基于您的创意，让AI快速生成可交互的产品Demo
-                            </div>
-                        </div>
+                <!-- 深度分析模块 -->
+                <div style="background: var(--bg-secondary); padding: 16px; border-radius: 12px; margin-bottom: 16px;">
+                    <div style="font-size: 14px; font-weight: 600; color: var(--text-primary); margin-bottom: 12px; display: flex; align-items: center; gap: 8px;">
+                        <span>📈</span>
+                        <span>深度分析</span>
+                    </div>
+                    <div style="display: flex; gap: 12px;">
                         <button
-                            id="demoBtn"
+                            id="businessPlanBtn"
                             class="btn-primary generation-btn btn-idle"
-                            data-type="demo"
+                            data-type="business"
                             data-status="idle"
-                            onclick="handleGenerationBtnClick('demo')"
-                            style="background: white; color: #667eea; border: none; font-weight: 600;">
-                            <span class="btn-icon">🚀</span>
-                            <span class="btn-text">开始生成Demo</span>
+                            onclick="handleGenerationBtnClick('business')"
+                            style="flex: 1;">
+                            <span class="btn-icon">📊</span>
+                            <span class="btn-text">商业计划书</span>
+                        </button>
+                        <button
+                            id="proposalBtn"
+                            class="btn-primary generation-btn btn-idle"
+                            data-type="proposal"
+                            data-status="idle"
+                            onclick="handleGenerationBtnClick('proposal')"
+                            style="flex: 1;">
+                            <span class="btn-icon">📋</span>
+                            <span class="btn-text">产品立项材料</span>
                         </button>
                     </div>
                 </div>
+
+                <!-- 报告操作按钮 -->
                 <div style="display: flex; gap: 12px; justify-content: flex-end;">
-                    <button class="btn-secondary" onclick="exportFullReport()">导出PDF</button>
-                    <button class="btn-primary" onclick="generateShareLink()">分享链接</button>
+                    <button class="btn-secondary" onclick="exportFullReport()">
+                        <svg width="16" height="16" fill="none" stroke="currentColor" viewBox="0 0 24 24" style="display: inline; vertical-align: middle; margin-right: 4px;">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M9 19l3 3m0 0l3-3m-3 3V10"/>
+                        </svg>
+                        导出PDF
+                    </button>
+                    <button class="btn-primary" onclick="generateShareLink()">
+                        <svg width="16" height="16" fill="none" stroke="currentColor" viewBox="0 0 24 24" style="display: inline; vertical-align: middle; margin-right: 4px;">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"/>
+                        </svg>
+                        分享链接
+                    </button>
                 </div>
             </div>
         </div>
@@ -1096,8 +1134,12 @@
     <!-- 组件模块 -->
     <script src="frontend/js/components/modal-manager.js"></script>
     <script src="frontend/js/components/agent-progress.js"></script>
+    <script src="frontend/js/components/markdown-renderer.js"></script>
 
     <!-- 功能模块 -->
+    <script src="frontend/js/modules/project-manager.js"></script>
+    <script src="frontend/js/modules/workflow-executor.js"></script>
+    <script src="frontend/js/modules/workflow-recommendation-manager.js"></script>
     <script src="frontend/js/modules/business-plan-generator.js"></script>
 
     <script>
@@ -4817,162 +4859,23 @@
             }
         }
 
-        // 加载团队空间内容
+        // 加载团队空间内容（项目管理）
         function loadTeamSpace() {
             const teamView = document.getElementById('teamView');
-            const isEnabled = state.settings.enableTeam || false;
-
-            if (!isEnabled) {
-                // 显示未启用状态
+            
+            // 检查projectManager是否已初始化
+            if (!window.projectManager) {
+                console.error('[loadTeamSpace] projectManager未初始化');
                 teamView.innerHTML = `
-                    <div class="team-space-preview">
-                        <div class="team-space-empty">
-                            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
-                            </svg>
-                            <div>数字员工项目空间</div>
-                            <div>请在设置中开启此功能</div>
-                        </div>
+                    <div style="padding: 20px; text-align: center; color: var(--text-secondary);">
+                        <p>项目管理器加载中...</p>
                     </div>
                 `;
                 return;
             }
 
-            // 检测设备类型
-            const isMobile = window.innerWidth <= 640;
-
-            if (isMobile) {
-                // 移动端：只读预览模式
-                teamView.innerHTML = `
-                    <div class="team-space-preview">
-                        <div class="team-space-empty">
-                            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z" />
-                            </svg>
-                            <div>移动端预览模式</div>
-                            <div>请在桌面端进行完整操作</div>
-                        </div>
-                    </div>
-                `;
-            } else {
-                // 桌面端：显示项目列表
-                renderProjectList();
-            }
-        }
-
-        // 渲染项目列表（侧边栏）
-        function renderProjectList() {
-            const teamView = document.getElementById('teamView');
-
-            // 初始化项目数据（如果没有）
-            if (!state.teamSpace) {
-                state.teamSpace = {
-                    projects: [],
-                    agents: [],
-                    knowledge: []
-                };
-            }
-
-            const projects = state.teamSpace.projects || [];
-
-            // 按状态分组项目
-            const activeProjects = projects.filter(p => p.status === 'active');
-            const archivedProjects = projects.filter(p => p.status === 'archived');
-
-            // 构建项目组HTML
-            const renderProjectGroup = (title, projectList, isCollapsible = false) => {
-                if (projectList.length === 0) return '';
-
-                const projectsHTML = projectList.map(project => {
-                    const memberCount = (project.assignedAgents || []).length;
-                    const ideaCount = (project.linkedIdeas || []).length;
-
-                    return `
-                        <div class="project-item ${project.id === state.currentProject ? 'active' : ''}"
-                             onclick="openProject('${project.id}')">
-                            <div class="project-icon">${project.icon || '📁'}</div>
-                            <div class="project-info">
-                                <div class="project-name">${project.name}</div>
-                                <div class="project-meta">
-                                    <span class="project-stat">
-                                        <svg width="14" height="14" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-3-3v0a3 3 0 00-3 3v2zm-3-7a3 3 0 100-6 3 3 0 000 6z"/>
-                                        </svg>
-                                        ${memberCount}
-                                    </span>
-                                    <span class="project-stat">
-                                        <svg width="14" height="14" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707"/>
-                                        </svg>
-                                        ${ideaCount}
-                                    </span>
-                                </div>
-                            </div>
-                            <button class="project-knowledge-btn"
-                                    onclick="event.stopPropagation(); showKnowledgeBase('project', '${project.id}')"
-                                    title="项目知识库"
-                                    aria-label="打开项目知识库">
-                                <svg width="16" height="16" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"/>
-                                </svg>
-                            </button>
-                        </div>
-                    `;
-                }).join('');
-
-                return `
-                    <div class="project-group">
-                        <div class="project-group-header">
-                            <span class="project-group-title">${title}</span>
-                            <span class="project-group-count">${projectList.length}</span>
-                        </div>
-                        <div class="project-group-list">
-                            ${projectsHTML}
-                        </div>
-                    </div>
-                `;
-            };
-
-            // 构建空状态
-            const emptyState = projects.length === 0 ? `
-                <div class="team-empty-state">
-                    <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                    </svg>
-                    <div class="team-empty-title">还没有项目</div>
-                    <div class="team-empty-desc">创建第一个项目开始协作</div>
-                    <button class="team-empty-action" onclick="createNewProject()">
-                        <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                        </svg>
-                        创建项目
-                    </button>
-                </div>
-            ` : '';
-
-            // 渲染完整结构
-            teamView.innerHTML = `
-                <div class="team-space-full">
-                    <!-- 顶部操作栏 -->
-                    <div class="team-header">
-                        <div class="team-header-title">项目空间</div>
-                        <div class="team-header-actions">
-                            <button class="team-action-btn primary" onclick="createNewProject()" title="新建项目">
-                                <svg width="18" height="18" fill="currentColor" viewBox="0 0 16 16">
-                                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-
-                    <!-- 项目列表区域 -->
-                    <div class="team-content">
-                        ${emptyState}
-                        ${renderProjectGroup('进行中', activeProjects)}
-                        ${renderProjectGroup('已归档', archivedProjects, true)}
-                    </div>
-                </div>
-            `;
+            // 渲染项目列表
+            window.projectManager.renderProjectList('projectListContainer');
         }
 
         // ==================== 项目管理功能 ====================
